--- a/src/components/Navleft/index.less
+++ b/src/components/Navleft/index.less
@@ -97,6 +97,14 @@
   }
 }
 
+.sty2{
+
+  color: white;
+
+  font-size: 40px;
+
+}
+
 @keyframes fadeLeftIn {
   0% {
     transform: translateX(5px);
