--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -1,17 +1,8 @@
-.Footer {
-    margin-bottom: 24px;
-  
-    :global {
-      .ant-breadcrumb {
-        display: flex;
-        align-items: center;
-      }
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .bread {
-      margin-bottom: 12px;
-    }
-  }
-  
+@import './../../style/default.less';
+
+.footer{
+    height: 100px;
+    padding: 40px 0;
+    text-align: center;
+    color:@colorJ;
+}
